#############################################################################
# Makefile.am for include module                                            #
# ------------------------------------------------------------------------- #
# Copyright (C) 2016-2020 Juergen Knoedlseder                               #
# ------------------------------------------------------------------------- #
#                                                                           #
#  This program is free software: you can redistribute it and/or modify     #
#  it under the terms of the GNU General Public License as published by     #
#  the Free Software Foundation, either version 3 of the License, or        #
#  (at your option) any later version.                                      #
#                                                                           #
#  This program is distributed in the hope that it will be useful,          #
#  but WITHOUT ANY WARRANTY; without even the implied warranty of           #
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            #
#  GNU General Public License for more details.                             #
#                                                                           #
#  You should have received a copy of the GNU General Public License        #
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.    #
#                                                                           #
#############################################################################

# Define package included headers (to be installed)
pkginclude_HEADERS = GammaLib.hpp \
                     GTypemaps.hpp \
                     GBase.hpp \
                     GContainer.hpp \
                     GRegistry.hpp \
                     GException.hpp \
                     GNodeArray.hpp \
                     GBilinear.hpp \
                     GTools.hpp \
                     GCsv.hpp \
                     GRan.hpp \
                     GUrl.hpp \
                     GUrlFile.hpp \
                     GUrlString.hpp \
                     GFilename.hpp \
                     GVector.hpp \
                     GMatrixBase.hpp \
                     GMatrix.hpp \
                     GMatrixSparse.hpp \
                     GMatrixSymmetric.hpp \
                     GIntegral.hpp \
                     GIntegrals.hpp \
                     GDerivative.hpp \
                     GFunction.hpp \
                     GFunctions.hpp \
                     GMath.hpp \
                     GNdarray.hpp \
                     GFft.hpp \
                     GFftWavetable.hpp \
                     GFits.hpp \
                     GFitsHDU.hpp \
                     GFitsHeader.hpp \
                     GFitsHeaderCard.hpp \
                     GFitsImage.hpp \
                     GFitsImageByte.hpp \
                     GFitsImageSByte.hpp \
                     GFitsImageUShort.hpp \
                     GFitsImageShort.hpp \
                     GFitsImageULong.hpp \
                     GFitsImageLong.hpp \
                     GFitsImageLongLong.hpp \
                     GFitsImageFloat.hpp \
                     GFitsImageDouble.hpp \
                     GFitsTable.hpp \
                     GFitsAsciiTable.hpp \
                     GFitsBinTable.hpp \
                     GFitsTableCol.hpp \
                     GFitsTableBitCol.hpp \
                     GFitsTableBoolCol.hpp \
                     GFitsTableByteCol.hpp \
                     GFitsTableStringCol.hpp \
                     GFitsTableUShortCol.hpp \
                     GFitsTableShortCol.hpp \
                     GFitsTableULongCol.hpp \
                     GFitsTableLongCol.hpp \
                     GFitsTableLongLongCol.hpp \
                     GFitsTableFloatCol.hpp \
                     GFitsTableDoubleCol.hpp \
                     GFitsTableCFloatCol.hpp \
                     GFitsTableCDoubleCol.hpp \
                     GXml.hpp \
                     GXmlNode.hpp \
                     GXmlDocument.hpp \
                     GXmlText.hpp \
                     GXmlElement.hpp \
                     GXmlComment.hpp \
                     GXmlAttribute.hpp \
                     GXmlPI.hpp \
                     GVOClient.hpp \
                     GVOHub.hpp \
                     GVOTable.hpp \
                     GPha.hpp \
                     GArf.hpp \
                     GRmf.hpp \
                     GApplication.hpp \
                     GLog.hpp \
                     GApplicationPars.hpp \
                     GApplicationPar.hpp \
                     GOptimizer.hpp \
                     GOptimizerLM.hpp \
                     GOptimizerPar.hpp \
                     GOptimizerPars.hpp \
                     GOptimizerFunction.hpp \
                     GTestSuite.hpp \
                     GTestSuites.hpp \
                     GTestCase.hpp \
                     GSkyDir.hpp \
                     GSkyDirs.hpp \
                     GHorizDir.hpp \
                     GSkyPixel.hpp \
                     GSkyMap.hpp \
                     GSkyRegion.hpp \
                     GSkyRegions.hpp \
                     GSkyRegionCircle.hpp \
                     GSkyRegionRectangle.hpp \
                     GSkyRegionMap.hpp \
                     GSkyProjection.hpp \
                     GHealpix.hpp \
                     GWcsRegistry.hpp \
                     GWcs.hpp \
                     GWcsAIT.hpp \
                     GWcsARC.hpp \
                     GWcsAZP.hpp \
                     GWcsCAR.hpp \
                     GWcsGLS.hpp \
                     GWcsMER.hpp \
                     GWcsMOL.hpp \
                     GWcsSIN.hpp \
                     GWcsSFL.hpp \
                     GWcsSTG.hpp \
                     GWcsTAN.hpp \
                     GEnergy.hpp \
                     GEnergies.hpp \
                     GTime.hpp \
                     GTimes.hpp \
                     GTimeReference.hpp \
                     GCaldb.hpp \
                     GObservations.hpp \
                     GObservation.hpp \
                     GObservationRegistry.hpp \
                     GEvents.hpp \
                     GEventList.hpp \
                     GEventCube.hpp \
                     GEvent.hpp \
                     GEventAtom.hpp \
                     GEventBin.hpp \
                     GGti.hpp \
                     GRoi.hpp \
                     GEbounds.hpp \
                     GPhases.hpp \
                     GInstDir.hpp \
                     GResponse.hpp \
                     GResponseCache.hpp \
                     GResponseVectorCache.hpp \
                     GPhotons.hpp \
                     GPhoton.hpp \
                     GSource.hpp \
                     GModelPar.hpp \
                     GModelAssociation.hpp \
                     GModelAssociations.hpp \
                     GModels.hpp \
                     GModel.hpp \
                     GModelRegistry.hpp \
                     GModelSky.hpp \
                     GModelData.hpp \
                     GModelSpatial.hpp \
                     GModelSpatialRegistry.hpp \
                     GModelSpatialPointSource.hpp \
                     GModelSpatialRadial.hpp \
                     GModelSpatialRadialDisk.hpp \
                     GModelSpatialRadialGauss.hpp \
                     GModelSpatialRadialShell.hpp \
                     GModelSpatialRadialRing.hpp \
                     GModelSpatialRadialProfile.hpp \
                     GModelSpatialRadialProfileGauss.hpp \
                     GModelSpatialRadialProfileDMBurkert.hpp \
                     GModelSpatialRadialProfileDMEinasto.hpp \
                     GModelSpatialRadialProfileDMZhao.hpp \
                     GModelSpatialElliptical.hpp \
                     GModelSpatialEllipticalDisk.hpp \
                     GModelSpatialEllipticalGauss.hpp \
                     GModelSpatialDiffuse.hpp \
                     GModelSpatialDiffuseConst.hpp \
                     GModelSpatialDiffuseCube.hpp \
                     GModelSpatialDiffuseMap.hpp \
                     GModelSpatialComposite.hpp \
                     GModelSpectral.hpp \
                     GModelSpectralRegistry.hpp \
                     GModelSpectralBrokenPlaw.hpp \
                     GModelSpectralSmoothBrokenPlaw.hpp \
                     GModelSpectralComposite.hpp \
                     GModelSpectralConst.hpp \
                     GModelSpectralExpInvPlaw.hpp \
                     GModelSpectralExpPlaw.hpp \
                     GModelSpectralExponential.hpp \
                     GModelSpectralSuperExpPlaw.hpp \
                     GModelSpectralFunc.hpp \
                     GModelSpectralGauss.hpp \
                     GModelSpectralLogParabola.hpp \
                     GModelSpectralMultiplicative.hpp \
                     GModelSpectralNodes.hpp \
                     GModelSpectralPlaw.hpp \
                     GModelSpectralPlawPhotonFlux.hpp \
                     GModelSpectralPlawEnergyFlux.hpp \
                     GModelSpectralTable.hpp \
                     GModelSpectralTablePar.hpp \
                     GModelSpectralTablePars.hpp \
                     GModelTemporal.hpp \
                     GModelTemporalRegistry.hpp \
                     GModelTemporalConst.hpp \
                     GModelTemporalLightCurve.hpp \
                     GModelTemporalPhaseCurve.hpp
